# eric-monitors

./: .gitignore  LICENSE  README.md  pyproject.toml
eric-monitors-python-logger/: README.md  pyproject.toml
eric-monitors-python-logger/eric_monitors_python_logger/: __init__.py
eric-monitors-python-logger/examples/: example_logger.py
eric-monitors-watchdog/: README.md  pyproject.toml
eric-monitors-watchdog/eric_monitors_watchdog/: __init__.py
eric-monitors-watchdog/examples/: example_watchdog.py
eric_monitors/: logger.py  sandbox.py
eric_monitors/watchdog/: pyproject.toml  watchdog.py
examples/: example_logger.py  example_wd.py
