[project]
name = "eric-monitors"
version = "0.0.0"
description = ""
authors = [
    {name = "luca",email = "laxertu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eric-sse (>=2.1.1.2,<3.0.0.0)",
]


[project.optional-dependencies]
watchdog = ["eric-monitors-watchdog @ file:///home/luca/code/python/eric-monitors/eric-monitors-watchdog"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
