[project]
name = "eric-monitors"
version = "0.0.0"
description = ""
authors = [
    {name = "Luca Stretti",email = "laxertu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eric-sse (>=2.1.1.2,<3.0.0.0)",
]

[tool.poetry.dependencies]
eric-monitors-watchdog = { path = "./eric-monitors-watchdog", optional = true }

[project.optional-dependencies]
watchdog = ["eric-monitors-watchdog"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
