[project]
name = "eric-monitors-python-logger"
version = "0.0.1"
description = ""
authors = [
    {name = "luca",email = "laxertu@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
