[project]
name = "eric-monitors-watchdog"
version = "0.0.1"
description = ""
authors = [
    {name = "Luca Stretti",email = "laxertu@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
